feat: sort external sources internally; remove idx:sorted
The merge join that attaches external children needs rows grouped and
ascending by subject, because Lucene has no partial document update and a
block join must be written whole. That requirement used to be pushed onto
config as idx:sorted, with two bad outcomes: assert it and you had to
pre-sort the file yourself, or omit it and the whole source was buffered
into memory.

Neither is something to explain to an operator. The pre-sort in particular
had a trap that is easy to hit and hard to see: byte order and the obvious
export rarely agree, so ORDER BY collar_id on an integer column yields
1175968 before 117597 — numerically right, lexically wrong, and the build
either failed or matched almost nothing depending on which branch you were
on. TestGswaMeasurementCsv existed specifically to pin that behaviour.

SortingRowSource now establishes the order: a standard external merge sort,
buffering up to jena.text.external.sortBufferRows (200k) before spilling a
run to a temp file and merging k-way at the end. An input that fits never
touches disk. Memory is bounded by the buffer rather than the input, so the
old buffer-everything path is gone and any size of source is safe. The sort
is stable, so rows sharing a subject keep their input order — duplicate
(subject, property) rows are legal and a delta's rows are position-sensitive.

Applied at every leaf reader, so no format has to promise ordering. Deltas
get it on the base and on each delta layer, which removes the rule that
idx:delta required idx:sorted true.

Removed: idx:sorted from the vocabulary, assembler and ExternalSourceDef;
CsvRowSource.checkOrder; ExternalChildMerger's buffering fallback.

Tests: TestSortingRowSource covers descending input, ungrouped repeats,
stability, null-vs-empty round trips, non-ASCII, empty input, and a 500-row
many-run merge — each ordering case run both in memory and with a one-row
buffer to drive the spill path, which shares no c